# coingecko_playground

./: .env.example  .gitignore  pyproject.toml
database/: env.py  tables.py
database/versions/: df38f4eb2a1f_create_coins_list_table.py
src/models/: coin_list.py  file_info.py  raw_coin_list.py
src/service/: coin_list_extractor.py  extractor.py
src/service/dao/: coin_list_dao.py  s3_explorer.py
src/utils/: logger_utils.py
