[tool.poetry]
name = "coingeckopg"
version = "0.1.0"
description = ""
authors = ["Elson Chan <elsonccjgmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.10.6"
retry = "^0.9.2"
sqlalchemy = "^2.0.38"
python-dotenv = "^1.0.1"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
types-requests = "^2.32.0.20241016"
mypy-boto3-s3 = "^1.36.15"
boto3 = "^1.36.16"
s3pathlib = "^2.3.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.4"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
